# wkt1_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  debug_ai_pipeline_from_wav.py  main.py  pyproject.toml  requirements.txt  test_bailian_app.py  wifi_net_test_server.py
.github/workflows/: ci.yml  publish.yml
config/: museum_vision_candidates.json  museum_vision_index.json
core/: config.py  paths.py
core/config/: museum_vision_candidates.json
data/knowledge_export/: denggong_gui.md  (+4 more)
docs/: current_status.md  deployment.md
knowledge/: README.md
knowledge_docs/: README.md
routers/: photo.py
scripts/: build_exhibit_knowledge.py  build_vision_knowledge.py  check_museum_refs.py  copy_test_image_to_ref.py
server/: __init__.py  intercom_server.py  protocol.py  udp_server.py  walkie_app.py
services/: __init__.py  ai_session_store.py  asr_service.py  bailian_app_service.py  camera_guide_debug_service.py  dify_service.py  exhibit_knowledge_service.py  guide_answer_service.py  photo_guide_service.py  photo_service.py  tour_orchestrator.py  tts_service.py  vision_service.py  visual_match_service.py
tests/: test_ai_cancel.py  test_camera_upload_context.py  test_intercom_server.py  test_udp_opus_downlink.py  test_udp_pcm_forward.py  test_visual_match_service.py
tools/: README.md  build_vision_profiles.py  check_artifact_pipeline.py  check_audio_loop.py  check_bailian_app.py  check_camera_guide.py  check_device_client.py  check_http_client_e2e.py  check_wav_pipeline.py  clean_tmp.py  test_dify_service.py  test_tts_service.py
(+25 files in other folders)
